ROI - SampleInfo Titles Layout Fix (#1843)
* ROI - SampleInfo Titles layout bug
* ROI Region position tweaks

Former-commit-id: b4cafb15b98fd03b045cbcc405793485e03e5428

--- a/css/_roi.scss
+++ b/css/_roi.scss
@@ -465,7 +465,7 @@ $igv-roi-table-background-color: #eee;
 
   overflow: visible;
 
-  margin-top: 44px;
+  margin-top: 66px;
 
   //border-left-width: thin;
   //border-left-style: solid;
