--- a/css/igv.css
+++ b/css/igv.css
@@ -2105,7 +2105,7 @@
   bottom: 0;
   pointer-events: none;
   overflow: visible;
-  margin-top: 44px;
+  margin-top: 66px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
